# r-dynamic-coloring

./: .env.example  .env.template  .gitignore  ColorearTn.py  Dockerfile  Makefile  README.md  RecursiveColoring.py  docker-compose.yaml  environment.yml  go.mod  go.sum  graph_constants.py  graph_details.py  graph_types.py  test.py  test2.py  tsconfig.json
.github/workflows/: build-packages.yaml  deploy-render.yaml  deploy-vercel.yaml  docker-services.yaml  lint.yml  playwright.yml  reusable-docker.yaml  update-envs.yaml
agent/: .dockerignore  .env.example  .env.template  CHAT_USAGE.md  Dockerfile  README.md  chat_cli.py  checkpoint_manager.py  config.py  database.py  graph_parsers.py  main.py  pyproject.toml  setup.sh  state.py  streamlit_app.py  test_chat.py  test_database.py  verify_setup.py
agent/.streamlit/: config.toml
agent/agent/: __init__.py  graph.py  nodes.py  prompts.py
agent/api/: main.py  schemas.py
agent/api/routers/: __init__.py  chat.py  graph.py  query.py  sessions.py  sources.py
agent/examples/: api_examples.py  basic_usage.py
agent/messages/: system.py
agent/src/: __init__.py  agent.py  models.py  nodes.py  state.py
agent/src/messages/: system.py
agent/tools/: __init__.py  graph_analysis.py  graph_visualization.py  image_parsing.py
api/: .env.template  .gitignore  Dockerfile  Makefile  go.mod  go.sum
cmd/server/: main.go
internal/config/: config.go
internal/database/: database.go
internal/handler/: assignColoring.go  graph.go  routes.go
internal/models/: assignment.go  configuration.go  graph.go
internal/server/: server.go
internal/validation/: assignColoring.go  graph.go  init.go
main/: __init__.py  main.py
main/coloring/: model.py
main/eulerian/: coloring_algorithm.py
main/graph/: graph_coloring.py  graph_constants.py  graph_details.py  graph_types.py
main/schemas/: requests.py
main/services/: coloring_service.py
main/star/: star_algorithm.py  star_details.py  star_types.py  star_update.py  star_utils.py
main/utils/: antiprism.py  check_multigraph.py  graph_utils.py  solve_graphs.py
model/: .gitignore  Dockerfile  Makefile  pyproject.toml
model/main/api/: endpoints.py
model/main/auth/: helper.py
model/main/coloring/: r_dynamic.py
model/main/eulerian/: graph.py
model/main/graph/: graph_coloring.py  graph_details.py
model/main/schemas/: request_plot.py  requests.py
model/main/services/: coloring_service.py
model/main/star/: star_types.py
model/main/test/: max_degree_t_star.py  thesis_validations.py
model/main/utils/: antiprism.py  network.py  planar3.py
pkg/utils/: linearProgram.go
platform/: .env.example  .gitignore  README.md  next.config.ts  package.json  pnpm-lock.yaml  proxy.ts
platform-2/: .env.example  package.json  pnpm-lock.yaml
platform-2/app/: layout.tsx
platform-2/components/: nav-user.tsx  sidebar-left.tsx  sidebar-right.tsx
platform-2/lib/: graph-constants.ts
platform/app/: layout.tsx
platform/artifacts/: actions.ts
platform/components/: app-sidebar copy.tsx  app-sidebar.tsx  artifact-messages.tsx  artifact.tsx  chat-agent copy.tsx  chat-agent.tsx  chat-header.tsx  chat.tsx  clear-graph-canvas.tsx  code-editor.tsx  coloring-parameters.tsx  create-artifact.tsx  message.tsx  (+24 more)
research/: verify_r_dynamic.py
scripts/: load_envs.sh  load_envs.yaml
(+101 files in other folders)
