[project]
name = "model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "click==8.3.0",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "dnspython==2.8.0",
    "email-validator==2.3.0",
    "fastapi==0.119.0",
    "fastapi-cli==0.0.13",
    "fastapi-cloud-cli==0.3.1",
    "fonttools==4.58.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "idna==3.10",
    "jinja2==3.1.6",
    "kiwisolver==1.4.8",
    "loguru==0.7.3",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "matplotlib==3.10.3",
    "mdurl==0.1.2",
    "networkx==3.4.2",
    "numpy==2.2.6",
    "packaging==25.0",
    "pandas==2.2.3",
    "pillow==11.2.1",
    "pulp==3.1.1",
    "pydantic==2.12.0",
    "pydantic-core==2.41.1",
    "pygments==2.19.2",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "rich==14.2.0",
    "rich-toolkit==0.15.1",
    "rignore==0.7.0",
    "sentry-sdk==2.41.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "starlette==0.48.0",
    "tqdm==4.67.1",
    "typer==0.19.2",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "uvicorn==0.37.0",
    "uvloop==0.21.0",
    "watchfiles==1.1.0",
    "websockets==15.0.1"
]
